CSS/wicart.css
/*******************************
 *
 *******************************/

.bird
{
border: 14px solid purple;
width: 100px;
height: 100px;
position: absolute;
text-align: left;
display: none;
/*background: #F0F0F0;*/
vertical-align: middle;
font-size: 18px;
}
.blindLayer {
/* background: none repeat scroll 0 0 rgba(0, 0, 0, 0.8); */
background-color: #F0FFF0;
bottom: 0;
left: 0;
position: fixed;
right: 0;
top: 0;
z-index: 1001;
display: none;
/* border: solid 5px yellow; */
}
.bcontainer
{
position: absolute;
max-width: 550px;
width: calc(100vw - 1em);
margin: 0 auto;
max-height: 1000px;
height: calc(100vh - 1em);
background: white;
/* border: 8px solid #999; */
padding: 20px;
display: none;
z-index: 1002;
/* top: -200px; */
}
#overflw
{
  overflow-y: scroll;
  overflow-x: hidden;
  height: 300px;
}
#bcaption
{
  background: #C0C0C0;
}
#bcaption td
{
  border-right: 2px solid #999;
  font-weight: bold;
  text-align: center;
}
#bcaption td {padding: 5px;}
#bcaption td:nth-child(1) { width: 50px; }		/*ID*/
#bcaption td:nth-child(2) { width: 300px; }		/*NAME*/
#bcaption td:nth-child(3) { width: 100px; }		/*PRICE*/
#bcaption td:nth-child(4) { width: 150px; }		/*NUM*/
#bcaption td:nth-child(5) { width: 70px; }		/*SUM*/

.bitem td
{
  font: normal 18px Arial;
  color: #999;
  padding: 5px;
  border-bottom: 1px solid #999;
  border-right: 2px solid #FFF;
}

.bitem td:nth-child(1) { width: 50px; }
.bitem td:nth-child(2) { width: 300px; }
.bitem td:nth-child(3) { width: 100px; text-align: center;}
.bitem td:nth-child(4) { width: 150px; text-align: center;}
.bitem td:nth-child(5) { width: 70px; text-align: center;}

#bclose
{
  float: right;
}

.bcontainer table
{
  width: 100%;
}
.bbutton
{
  color: #999;
  -webkit-box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.75);
  -moz-box-shadow:    0px 0px 3px 0px rgba(50, 50, 50, 0.75);
  box-shadow:         0px 0px 3px 0px rgba(50, 50, 50, 0.75);
  padding: 5px;
  font: bold 16px Arial;
}
#bsum
{
  float: right;
  margin: 0 20px;
  font: normal 18px Arial;
}
#cart {
   /* position: relative;
   top: 10px;
   border: solid 20px red; */
}
.popup {
  background: none repeat scroll 0 0 #F0FFF0;
  /* border: 5px solid #808040; */
  /* left: 50%;
  margin-left: -275px; */
  padding: 25px 20px;
  position: relative;
  /* top: 50px; */
  max-width: 550px;
  width: calc(100vw - 1em);
  max-height: 1000px;
  height: calc(100vh - 1em);
  margin: 0 auto;
  z-index: 2002;
  display: none;
}
.buttonSend {
   width: 100%;
   padding: 15px;
   margin-top: 15px;
}
.image-close-icon {
   width: 50px;
   height: 50px;
   background-size: contain;
   border: 2px solid red;
}
.popup h4	{
		margin-bottom: 4px;
}
.popup form	{
  padding: 30px 0 0 0;
}
.popup input[type="text"] {
  text-align: center;
  font-style: italic;
  display: block;
  width: 100%;
  margin-bottom: 10px;
  border: 1px solid #D9D9D9;
  display: inline-block;
  height: 40px;
  line-height: 40px;
  padding: 0;
  vertical-align: middle;
}
.popup .alignCenter	{
  margin-top: 30px;
}
.popup textarea {
  display: block;
  font-style: italic;
  margin-bottom: 10px;
  text-align: left;
  width: 100%;
  border: 1px solid #D9D9D9;
}
.basket_num
{
  padding: 4px;
  background: #F0F0F0;
}
.basket_num_buttons
{
  width: 20px;
  height: 20px;
  border: 1px solid #000;
  margin: 0 5px;
  display: inline-block;
  color: #FFF;
  background: #000;
  text-align: center;
  cursor: pointer;
}

label {
  padding: 12px 12px 12px 0;
  display: inline-block;
}

/* input[type=submit] {
  background-color: #4CAF50;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  float: right;
}

input[type=submit]:hover {
  background-color: #45a049;
} */

.container-form {
  /* border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
  max-width: 1500px;
  width: calc(100vw - 6em);
  margin: 0 auto;
  position: relative;
  align-content: center;
  border: solid 2px red; */
}
.col-25 {
  float: left;
  width: 25%;
  margin-top: 6px;
}
.col-75 {
  float: left;
  width: 75%;
  margin-top: 6px;
}
/* Clear floats after the columns */
.row-form:after {
  content: "";
  display: table;
  clear: both;
}
/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .col-25, .col-75, input[type=text] {
    width: 100%;
    margin-top: 0;
  }
}

